src/MiniJava/Tests/DriverTests/parse_errors/unterminated_comment.mj
class MissingSemicolon
{
    public static void main()
    {
        System.out.println(x + /* lalalalalalaa
    }
}